# employee-register

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tox.ini
src/: employee.py  main.py
src/database/: interface.py  item.py  memory_db.py  response.py
tests/: conftest.py  datatools.py  test_employee.py  test_main.py  test_memory_db.py
tests/data/: employees.json
